# Hydra-Hybrid-Social-Protocol

./: README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/Hydra.Api/: Dockerfile  Hydra.Api.csproj  Hydra.Api.http  Program.cs
backend/Hydra.Api/API/Controllers/: AuthController.cs  BroadcastController.cs
backend/Hydra.Api/Core/Commands/: BroadcastMessageCommand.cs  BroadcastMessageCommandHandler.cs  SendMessageCommand.cs  SendMessageCommandHandler.cs
backend/Hydra.Api/Core/Entities/: Chat.cs  Message.cs  Post.cs  User.cs
backend/Hydra.Api/Core/Hubs/: ChatHub.cs  CustomUserIdProvider.cs
backend/Hydra.Api/Core/Interfaces/: IChatRepository.cs  IPostRepository.cs  IUserRepository.cs
backend/Hydra.Api/Core/Services/: BlockchainRelayService.cs  UniversalFeedService.cs  WalletAuthService.cs
backend/Hydra.Api/Core/Workers/: LedgerTailingWorker.cs
backend/Hydra.Api/Infrastructure/Data/: ChatRepository.cs  MongoDbContext.cs  PostRepository.cs  UserRepository.cs
backend/Hydra.Api/Properties/: launchSettings.json
docs/: .cursorrules  SECURITY_AUDIT.md  plan.md  prd.md  schema.md  techstack.md
frontend/hydra-web/: README.md  angular.json  package-lock.json  package.json
frontend/hydra-web/src/: index.html
frontend/hydra-web/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/hydra-web/src/app/chat/: chat.component.css  chat.component.html  (+1 more)
node/: CMakeLists.txt  Dockerfile
node/include/: Blockchain.h  HashUtil.h  TcpServer.h
node/src/: Blockchain.cpp  HashUtil.cpp  TcpServer.cpp  main.cpp
(+11 files in other folders)
